--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/cookie-parser": "^1.4.7",
+    "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.3.1",
     "cookie-parser": "^1.4.6",
